2011-11-17  Patrick Gansterer  <paroga@webkit.org>

        [CMake] Make CODE_GENERATOR_PREPROCESSOR more useable
        https://bugs.webkit.org/show_bug.cgi?id=72516

        Reviewed by Brent Fulgham.

        On windows some code generators fail, if the path to the preprocessor contains spaces.
        Use only the executable name to avoid this issue for now.

        * Source/cmake/OptionsCommon.cmake:

2011-11-17  Jochen Eisinger  <jochen@chromium.org>

        [chromium] add gyp-mac-tool to .gitignore
        https://bugs.webkit.org/show_bug.cgi?id=72603

        Reviewed by Tony Gentilcore.

        This file is generated by the make-based build of the chromium/mac port

        * .: Modified property svn:ignore.
        * .gitignore:

2011-11-17  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Move WebKit2 C++ APIs to private API and build QML extension plugin on top of that

        A new extension object has been added to QQuickWebView (the same approach should be used
        for other API classes that need experimental APIs). The QML extension mechanism is then
        built on top of the experimental object.

        https://bugs.webkit.org/show_bug.cgi?id=72522

        Reviewed by Simon Hausmann.

        * Source/QtWebKit.pro:
        * Source/api.pri:

2011-11-11  Adrienne Walker  <enne@google.com>

        [chromium] Expose mock scrollbars to window.internals
        https://bugs.webkit.org/show_bug.cgi?id=72195

        Reviewed by James Robinson.

        * Source/autotools/symbols.filter:

2011-11-15  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Centralize hide_symbols and ensure all libs are built with symbol visibility & bsymbolic_functions

        Reviewed by Tor Arne Vestbø.

        * Source/api.pri: Eliminate duplicated symbol stuff that lives now in default_post.prf.

2011-11-16  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Fix path to module file in root project file

        Reviewed by Simon Hausmann.